# Dinghy setup.cfg

[metadata]
name = dinghy
version = attr: dinghy.__version__
description = Dinghy daily digest tool
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
url = https://github.com/nedbat/dinghy
project_urls =
    # For some reason, these appear in reverse order on pypi...
    Twitter = https://twitter.com/nedbat
    Funding = https://github.com/sponsors/nedbat
    Issues = https://github.com/nedbat/dinghy/issues
    Source = https://github.com/nedbat/dinghy
author = Ned Batchelder
author_email = ned@nedbatchelder.com
license = Apache
zip_safe = False
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    dinghy
package_dir =
    = src
install_requires =
    aiofiles>=0.8
    aiohttp>3
    click>8
    click-log>0.3
    emoji
    glom
    jinja2>3
    pyyaml>=6

[options.package_data]
dinghy =
    graphql/*.*
    templates/*.*

[wheel]
universal = 1

[scriv]
fragment_directory = scriv.d
rst_header_chars = -.
version = literal: src/dinghy/__init__.py: __version__
